--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             </div>
             
         </header>
+        <div class="info-sec">
         <main class="main">
             <!-- <section class="main--section-sectors"> -->
                 <h1 class="main--section-heading">explore</h1>
@@ -89,6 +90,7 @@
                 </div>
             <!-- </section> -->
         </main>
+    </div>
         <footer>
             footer
         </footer>
