--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="images/logo/logo_main.png" type="image/icon type">
+    <link rel="stylesheet" href="css/ttd.css">
     <title>Ravangla Star</title>
 </head>
 <body>
@@ -90,7 +91,44 @@
                 </div>
             <!-- </section> -->
         </main>
+        <div class="ttd"> <!-- things to do -->
+            <div class="ttd--flex1"><!-- things to do flex1 -->
+                <h1 class="ttd--flex1-heading">nature valley viewpoint</h1>
+                <p class="ttd--flex1-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dolorem ipsam deserunt voluptate repudiandae impedit reiciendis quibusdam unde atque similique molestiae aperiam quam harum explicabo dolores velit, omnis repellat eos, reprehenderit quo nam eveniet. Harum hic quis atque officiis eaque.</p>
+            </div>
+
+            <div class="ttd--flex2"><!-- things to do flex2 -->
+                <div class="ttd--flex2--image1">
+                    <h1 class="ttd--flex2--image1--heading">island & beaches</h1>
+                </div>
+                <div class="ttd--flex2--image2">
+                    <h1 class="ttd--flex2--image2--heading">culture & heritage</h1>
+                </div>
+                <div class="ttd--flex2--image3">
+                    <h1 class="ttd--flex2--image3--heading">food & drinks</h1>
+                </div>
+                <div class="ttd--flex2--image4">
+                    <h1 class="ttd--flex2--image4--heading">family fun</h1>
+                </div>
+            </div>
+
+            <div class="ttd--flex3"><!-- things to do flex3 -->
+                <div class="ttd--flex3--image1">
+                    <h1 class="ttd--flex3--image1--heading">city excitement</h1>
+                </div>
+                <div class="ttd--flex3--image2">
+                    <h1 class="ttd--flex3--image2--heading">nature and adventure</h1>
+                </div>
+                <div class="ttd--flex3--image3">
+                    <h1 class="ttd--flex3--image3--heading">home stay</h1>
+                </div>
+            </div>
+
+
+        </div>
     </div>
+
+
         <footer>
             footer
         </footer>
