Changes made to the header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header class="header">
             <nav class="header-nav">
                 <!-- <ul class="header-nav-links"> -->
-                    <img src="images/logo/logo_main.png" alt="logo ravangla star" class="header-nav-logo">
+                    <!-- <img src="images/logo/logo_main.png" alt="logo ravangla star" class="header-nav-logo"> -->
                     <a class="header-nav-link" href="#head" autofocus>HOME</a>
                     <a class="header-nav-link" href="#explore">EXPLORE</a>
                     <a class="header-nav-link" href="#tours">TOURS</a>
@@ -23,6 +23,7 @@
                 <!-- </ul> -->
             </nav>
             <div class="header-heading">
+                <img src="images/logo/logo_main.png" alt="logo ravangla star" class="header-nav-logo">
                 <div class="header-heading-text-area">
                     <h1 class="header-heading-title-text">
                         Heart, Soul and the Himalayas
