popular destination added

--- a/index.html
+++ b/index.html
@@ -84,10 +84,7 @@
                         <div class="main--section-text">
                             mystic west
                         </div>
-
-                        
                     </div>
-
                 </div>
             <!-- </section> -->
         </main>
@@ -123,7 +120,26 @@
                     <h1 class="ttd--flex3--image3--heading">home stay</h1>
                 </div>
             </div>
+        </div>
 
+        <!-- another div of popular destination -->
+        <div class="pd">
+            <div class="pd--flex1">
+                <h1 class="pd--flex1--heading">popular destination</h1>
+                    <p class="pd--flex1--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam impedit non, amet aperiam nobis, dignissimos laudantium illo cum eos autem reiciendis temporibus ad doloribus cupiditate iure quisquam asperiores ipsam recusandae illum fugit! Deserunt ex fuga iusto placeat debitis quos ad!</p>
+            </div>
+
+            <div class="pd--flex2">
+                <div class="pd--flex2--image1">
+                    <h1 class="pd--flex2--image1--heading"></h1>
+                </div>
+                <div class="pd--flex2--image2">
+                    <h1 class="pd--flex--image2--heading"></h1>
+                </div>
+                <div class="pd--flex2--image3">
+                    <h1 class="pd--flex--image3--heading"></h1>
+                </div>
+            </div>
 
         </div>
     </div>
