--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="images/logo/logo_main.png" type="image/icon type">
     <link rel="stylesheet" href="css/ttd.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Ravangla Star</title>
 </head>
 <body>
@@ -18,6 +19,7 @@
                     <!-- <img src="images/logo/logo_main.png" alt="logo ravangla star" class="header-nav-logo"> -->
                     <a class="header-nav-link" href="#head" autofocus>HOME</a>
                     <a class="header-nav-link" href="#explore">EXPLORE</a>
+                    <!-- <img src="images/logo/logo_main.png" alt="logo ravangla star" class="header-nav-logo"> -->
                     <a class="header-nav-link" href="#tours">TOURS</a>
                     <a class="header-nav-link" href="#contacts">CONTACT</a>
 
@@ -25,6 +27,9 @@
             </nav>
             <div class="header-heading">
                 <img src="images/logo/logo_main.png" alt="logo ravangla star" class="header-nav-logo">
+                <div class="header-heading-services">
+
+                </div>
                 <div class="header-heading-text-area">
                     <h1 class="header-heading-title-text">
                         Heart, Soul and the Himalayas
