added accurate images in ttd and pd according to their names

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </main>
         <div class="ttd"> <!-- things to do -->
             <div class="ttd--flex1"><!-- things to do flex1 -->
-                <h1 class="ttd--flex1-heading">nature valley viewpoint</h1>
+                <h1 class="ttd--flex1-heading">Mind-blowing things to do</h1>
                 <p class="ttd--flex1-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dolorem ipsam deserunt voluptate repudiandae impedit reiciendis quibusdam unde atque similique molestiae aperiam quam harum explicabo dolores velit, omnis repellat eos, reprehenderit quo nam eveniet. Harum hic quis atque officiis eaque.</p>
             </div>
 
