--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
                         between tourist and the local Sikkimese community before showcasing the beauty of our destinations.
                         It's all about people over place.
                     </p> -->
-                    <a href="#" class="header-heading-title-button">Explore</a>
                 </div>
+                <a href="#" class="header-heading-title-button">Explore</a>
+
                 <div class="header-heading-social-links">
                     <a href="#" class="header-heading-social-links-icon">
                         <!-- <img src="images/icons/fb.png" alt="fb-social-link" class="header-heading-social-link-icons"> -->
@@ -69,12 +70,18 @@
                         <div class="main--section-text">
                             zenith north
                         </div>
+                        <div class="main--section-text-info">
+                            info about place
+                        </div>
                     </div>
                     <div class="main--section-card main--section-sectors-districts-east" >
                         <!-- <img src="images/tiles/aurora east.jpeg" alt="" class="main-tile-image"> -->
                         <!-- <div class="main-tile-image main-tile-image_east"></div> -->
                         <div class="main--section-text">
                            aurora east 
+                        </div>
+                        <div class="main--section-text-info">
+                            info about place
                         </div>
                     </div>
                     <div class="main--section-card main--section-sectors-districts-south">
@@ -83,6 +90,9 @@
                         <div class="main--section-text">
                             verdent south
                         </div>
+                        <div class="main--section-text-info">
+                            info about place
+                        </div>
                     </div>
                     <div class="main--section-card main--section-sectors-districts-west">
                         <!-- <img src="images/tiles/mystic west.jpeg" alt="" class="main-tile-image"> -->
@@ -90,62 +100,50 @@
                         <div class="main--section-text">
                             mystic west
                         </div>
+                        <div class="main--section-text-info">
+                            info about place
+                        </div>
+
+                        
                     </div>
+
                 </div>
             <!-- </section> -->
         </main>
         <div class="ttd"> <!-- things to do -->
             <div class="ttd--flex1"><!-- things to do flex1 -->
-                <h1 class="ttd--flex1-heading">Mind-blowing things to do</h1>
+                <h1 class="">nature valley viewpoint</h1>
                 <p class="ttd--flex1-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dolorem ipsam deserunt voluptate repudiandae impedit reiciendis quibusdam unde atque similique molestiae aperiam quam harum explicabo dolores velit, omnis repellat eos, reprehenderit quo nam eveniet. Harum hic quis atque officiis eaque.</p>
             </div>
 
             <div class="ttd--flex2"><!-- things to do flex2 -->
-                <div class="ttd--flex2--image1">
-                    <h1 class="ttd--flex2--image1--heading">island & beaches</h1>
+                <div class="util--card-shadow util-center ttd--flex2--image1">
+                    <h1 class="ttd--flex-heading">island & beaches</h1>
+                    
                 </div>
-                <div class="ttd--flex2--image2">
-                    <h1 class="ttd--flex2--image2--heading">culture & heritage</h1>
+                <div class="util--card-shadow util-center ttd--flex2--image2">
+                    <h1 class="ttd--flex-heading">culture & heritage</h1>
                 </div>
-                <div class="ttd--flex2--image3">
-                    <h1 class="ttd--flex2--image3--heading">food & drinks</h1>
+                <div class="util--card-shadow util-center ttd--flex2--image3">
+                    <h1 class="ttd--flex-heading">food & drinks</h1>
                 </div>
-                <div class="ttd--flex2--image4">
-                    <h1 class="ttd--flex2--image4--heading">family fun</h1>
+                <div class="util--card-shadow util-center ttd--flex2--image4">
+                    <h1 class="ttd--flex-heading">family fun</h1>
                 </div>
             </div>
 
             <div class="ttd--flex3"><!-- things to do flex3 -->
-                <div class="ttd--flex3--image1">
-                    <h1 class="ttd--flex3--image1--heading">city excitement</h1>
+                <div class="util--card-shadow util-center ttd--flex3--image1">
+                    <h1 class="ttd--flex-heading">city excitement</h1>
                 </div>
-                <div class="ttd--flex3--image2">
-                    <h1 class="ttd--flex3--image2--heading">nature and adventure</h1>
+                <div class="util--card-shadow util-center ttd--flex3--image2">
+                    <h1 class="ttd--flex-heading">nature and adventure</h1>
                 </div>
-                <div class="ttd--flex3--image3">
-                    <h1 class="ttd--flex3--image3--heading">home stay</h1>
+                <div class="util--card-shadow util-center ttd--flex3--image3">
+                    <h1 class="ttd--flex-heading">home stay</h1>
                 </div>
-            </div>
-        </div>
-
-        <!-- another div of popular destination -->
-        <div class="pd">
-            <div class="pd--flex1">
-                <h1 class="pd--flex1--heading">popular destination</h1>
-                    <p class="pd--flex1--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam impedit non, amet aperiam nobis, dignissimos laudantium illo cum eos autem reiciendis temporibus ad doloribus cupiditate iure quisquam asperiores ipsam recusandae illum fugit! Deserunt ex fuga iusto placeat debitis quos ad!</p>
             </div>
 
-            <div class="pd--flex2">
-                <div class="pd--flex2--image1">
-                    <h1 class="pd--flex2--image1--heading"></h1>
-                </div>
-                <div class="pd--flex2--image2">
-                    <h1 class="pd--flex--image2--heading"></h1>
-                </div>
-                <div class="pd--flex2--image3">
-                    <h1 class="pd--flex--image3--heading"></h1>
-                </div>
-            </div>
 
         </div>
     </div>
