Shadow transition of main made smooth

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="header-nav">
                 <!-- <ul class="header-nav-links"> -->
                     <!-- <img src="images/logo/logo_main.png" alt="logo ravangla star" class="header-nav-logo"> -->
-                    <a class="header-nav-link" href="#head" autofocus>HOME</a>
+                    <a class="header-nav-link" href="#head" >HOME</a>
                     <a class="header-nav-link" href="#explore">EXPLORE</a>
                     <!-- <img src="images/logo/logo_main.png" alt="logo ravangla star" class="header-nav-logo"> -->
                     <a class="header-nav-link" href="#tours">TOURS</a>
@@ -71,7 +71,8 @@
                             zenith north
                         </div>
                         <div class="main--section-text-info">
-                            info about place
+                            Known for its remote, pristine landscapes and the stunning Gurudongmar Lake, 
+                            North Sikkim is a paradise for nature lovers and adventurers.
                         </div>
                     </div>
                     <div class="main--section-card main--section-sectors-districts-east" >
@@ -81,7 +82,8 @@
                            aurora east 
                         </div>
                         <div class="main--section-text-info">
-                            info about place
+                            Home to the vibrant capital city of Gangtok and the breathtaking Tsomgo Lake, 
+                            East Sikkim is a blend of urban charm and natural beauty.
                         </div>
                     </div>
                     <div class="main--section-card main--section-sectors-districts-south">
@@ -91,7 +93,8 @@
                             verdent south
                         </div>
                         <div class="main--section-text-info">
-                            info about place
+                            Featuring lush green hills and historic monasteries like the famous Samdruptse and Namchi,
+                             South Sikkim offers a serene escape with a touch of cultural heritage.
                         </div>
                     </div>
                     <div class="main--section-card main--section-sectors-districts-west">
@@ -101,7 +104,8 @@
                             mystic west
                         </div>
                         <div class="main--section-text-info">
-                            info about place
+                            Renowned for its spiritual sites, including the sacred Pemayangtse Monastery, 
+                            and stunning treks such as the Dzongri and Goecha La, West Sikkim is a haven for trekkers and pilgrims.
                         </div>
 
                         
@@ -111,23 +115,23 @@
             <!-- </section> -->
         </main>
         <div class="ttd"> <!-- things to do -->
-            <div class="ttd--flex1"><!-- things to do flex1 -->
-                <h1 class="">nature valley viewpoint</h1>
+            <div class="util--padding-top ttd--flex1"><!-- things to do flex1 -->
+                <h1 class="ttd--flex1-heading">nature valley viewpoint</h1>
                 <p class="ttd--flex1-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dolorem ipsam deserunt voluptate repudiandae impedit reiciendis quibusdam unde atque similique molestiae aperiam quam harum explicabo dolores velit, omnis repellat eos, reprehenderit quo nam eveniet. Harum hic quis atque officiis eaque.</p>
             </div>
 
-            <div class="ttd--flex2"><!-- things to do flex2 -->
-                <div class="util--card-shadow util-center ttd--flex2--image1">
+            <div class="util--padding-top ttd--flex2"><!-- things to do flex2 -->
+                <div class="util--card util--card-shadow util-center ttd--flex2--image1">
                     <h1 class="ttd--flex-heading">island & beaches</h1>
                     
                 </div>
-                <div class="util--card-shadow util-center ttd--flex2--image2">
+                <div class="util--card util--card-shadow util-center ttd--flex2--image2">
                     <h1 class="ttd--flex-heading">culture & heritage</h1>
                 </div>
-                <div class="util--card-shadow util-center ttd--flex2--image3">
+                <div class="util--card util--card-shadow util-center ttd--flex2--image3">
                     <h1 class="ttd--flex-heading">food & drinks</h1>
                 </div>
-                <div class="util--card-shadow util-center ttd--flex2--image4">
+                <div class="util--card util--card-shadow util-center ttd--flex2--image4">
                     <h1 class="ttd--flex-heading">family fun</h1>
                 </div>
             </div>
