Services icon added to the hero page

--- a/index.html
+++ b/index.html
@@ -28,8 +28,29 @@
             <div class="header-heading">
                 <img src="images/logo/logo_main.png" alt="logo ravangla star" class="header-nav-logo">
                 <div class="header-heading-services">
+                    <div class="header-heading-services-container">
+                    <img src="images/icons/travel-and-tourism.png" class="header-heading-services-icons" alt="">
+                        <span >travel</span>
+                    </div>
+
+                    <div class="header-heading-services-container">
+                        <img src="images/icons/landscape.png" class="header-heading-services-icons" alt="">
+                            <span>adventure</span>
+                    </div>
+
+                    <div class="header-heading-services-container">
+                        <img src="images/icons/resort.png" class="header-heading-services-icons" alt="">
+                            <span>hotels</span>
+                    </div>
+
+                    <div class="header-heading-services-container">
+                        <img src="images/icons/restaurant.png" class="header-heading-services-icons" alt="">
+                            <span>Resturant</span>
+                    </div>
+                    
 
                 </div>
+                <!-- <a href="https://www.flaticon.com/free-icons/travel" title="travel icons">Travel icons created by Freepik - Flaticon</a> -->
                 <div class="header-heading-text-area">
                     <h1 class="header-heading-title-text">
                         Heart, Soul and the Himalayas
@@ -64,7 +85,7 @@
             <!-- <section class="main--section-sectors"> -->
                 <h1 class="main--section-heading">explore</h1>
                 <div class="main--section-sectors-districts">
-                    <div class="main--section-card main--section-sectors-districts-north">
+                    <div class="util--card main--section-card main--section-sectors-districts-north">
                         <!-- <img src="images/tiles/zenith North.jpeg" alt="" class="main-tile-image"> -->
                         <!-- <div class="main-tile-image main-tile-image_north"></div> -->
                         <div class="main--section-text">
@@ -75,7 +96,7 @@
                             North Sikkim is a paradise for nature lovers and adventurers.
                         </div>
                     </div>
-                    <div class="main--section-card main--section-sectors-districts-east" >
+                    <div class="util--card main--section-card main--section-sectors-districts-east" >
                         <!-- <img src="images/tiles/aurora east.jpeg" alt="" class="main-tile-image"> -->
                         <!-- <div class="main-tile-image main-tile-image_east"></div> -->
                         <div class="main--section-text">
@@ -86,7 +107,7 @@
                             East Sikkim is a blend of urban charm and natural beauty.
                         </div>
                     </div>
-                    <div class="main--section-card main--section-sectors-districts-south">
+                    <div class="util--card main--section-card main--section-sectors-districts-south">
                         <!-- <img src="images/tiles/verdentsouth.jpeg" alt="" class="main-tile-image"> -->
                         <!-- <div class="main-tile-image main-tile-image_south"></div> -->
                         <div class="main--section-text">
@@ -97,7 +118,7 @@
                              South Sikkim offers a serene escape with a touch of cultural heritage.
                         </div>
                     </div>
-                    <div class="main--section-card main--section-sectors-districts-west">
+                    <div class="util--card main--section-card main--section-sectors-districts-west">
                         <!-- <img src="images/tiles/mystic west.jpeg" alt="" class="main-tile-image"> -->
                         <!-- <div class="main-tile-image main-tile-image_west"></div> -->
                         <div class="main--section-text">
