added popular destination

--- a/index.html
+++ b/index.html
@@ -169,6 +169,23 @@
                 </div>
             </div>
 
+            <div class="pd">
+                <div class="pd-flex1">
+                    <h1 class="pd-flex1-heading">popular destination</h1>
+                    <p class="pd-flex1-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, temporibus enim! Sit inventore quisquam hic recusandae, eum ut ratione, ducimus non fuga debitis atque. Iusto itaque id, error neque corporis, consectetur quisquam omnis libero nostrum delectus porro rem cum culpa.</p>
+                </div>
+                <div class="destination">
+                    <div class="pd-flex2">
+                        <h1 class="pd-flex1--heading">destination 1</h1>
+                    </div>
+                    <div class="pd-flex3">
+                        <h1 class="pd-flex1--heading">destination 2</h1>
+                    </div>
+                    <div class="pd-flex4">
+                        <h1 class="pd-flex1--heading">destination 3</h1>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </div>
