--- a/index.html
+++ b/index.html
@@ -186,14 +186,55 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 
-
-        <footer>
-            footer
-        </footer>
+    <footer>
+        <div class="footer-main">
+            <div class="footer-main-contacts">
+                <div class="footer-main-contacts-icons">
+                    <img class="footer-main-contacts-icons-whatsapp" src="images/icons/whatsapp.png" alt="whatsapp">
+                    <p class="footer-main-contacts-icons-para">7477312911</p>
+                </div>
+                <div class="footer-main-contacts-icons">
+                    <img class="footer-main-contacts-icons-location" src="images/icons/map.png" alt="location">
+                    <p class="footer-main-contacts-icons-para">Gangtok</p>
+                </div>
+                <div class="footer-main-contacts-icons">
+                    <img class="footer-main-contacts-icons-email" src="images/icons/gmail.png" alt="email">
+                    <p class="footer-main-contacts-icons-para">sikkimtourism24@gmail.com</p>
+                </div>    
+            </div>
+            
+            <div class="footer-flex1">
+                <h1 class="footer-flex1-heading">terms & condition</h1>
+                <li class="footer-flex1-heading-li">
+                    <a href="" class="anchor">privacy policies</a>
+                    <a href="" class="anchor">legal notice</a>
+                    <a href="" class="anchor">payment terms</a>
+                    <a href="" class="anchor">topic</a>
+                </li>
+            </div>
+            <div class="footer-flex1">
+                <h1 class="footer-flex1-heading">Resources</h1>
+                <li class="footer-flex1-heading-li">
+                    <a href="" class="anchor">Application</a>
+                    <a href="" class="anchor">Documentation</a>
+                    <a href="" class="anchor">System</a>
+                    <a href="" class="anchor">FAQs</a>
+                </li>
+            </div>
+            <div class="footer-flex1">
+                <h1 class="footer-flex1-heading">Tracking Places</h1>
+                <li class="footer-flex1-heading-li">
+                    <a href="" class="anchor">East viewpoint</a>
+                    <a href="" class="anchor">West viewpoint</a>
+                    <a href="" class="anchor">North viewpoint</a>
+                    <a href="" class="anchor">South viewpoint</a>
+                </li>
+            </div>
+        </div>
+    </footer>
 
     </div>
     
