Changes in the main section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <!-- <a href="https://www.flaticon.com/free-icons/travel" title="travel icons">Travel icons created by Freepik - Flaticon</a> -->
                 <div class="header-heading-text-area">
                     <h1 class="header-heading-title-text">
-                        Heart, Soul and the Himalayas
+                        heart, soul and the himalayas
                     </h1>
                     <!-- <p class="header-heading-title-para">
                         Ravangla Star is your go-to DMC offering a range of tourism services,
