--- a/css/practice.html
+++ b/css/practice.html
@@ -2,40 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property--slide-item-content-name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="practice.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
-    <div class="container">
-        <div class="slide">
-            <div class="item" style="background-image:url(../images/ttd-destination/family.jpg);">
-                <div class="content">
-                    <div class="name">east</div>
-                    <div class="des">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt sint eum, possimus aliquid animi maxime fuga nisi mollitia maiores in.</div>
+    <div class="property">
+        <div class="property--slide">
+            <div class="property--slide-item" style="background-image:url(../images/ttd-destination/family.jpg);">
+                <div class="property--slide-item-content">
+                    <div class="property--slide-item-content-name">east</div>
+                    <div class="property--slide-item-content-des">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt sint eum, possimus aliquid animi maxime fuga nisi mollitia maiores in.</div>
                     <button>see more</button>
                 </div>
             </div>
-            <div class="item" style="background-image:url(../images/ttd-destination/gangtok.jpg);">
-                <div class="content">
-                    <div class="name">west</div>
-                    <div class="des">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt sint eum, possimus aliquid animi maxime fuga nisi mollitia maiores in.</div>
+            <div class="property--slide-item" style="background-image:url(../images/ttd-destination/gangtok.jpg);">
+                <div class="property--slide-item-content">
+                    <div class="property--slide-item-content-name">west</div>
+                    <div class="property--slide-item-content-des">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt sint eum, possimus aliquid animi maxime fuga nisi mollitia maiores in.</div>
                     <button>see more</button>
                 </div>
             </div>
-            <div class="item" style="background-image:url(../images/ttd-destination/destination3.jpg);">
-                <div class="content">
-                    <div class="name">north</div>
-                    <div class="des">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt sint eum, possimus aliquid animi maxime fuga nisi mollitia maiores in.</div>
+            <div class="property--slide-item" style="background-image:url(../images/ttd-destination/destination3.jpg);">
+                <div class="property--slide-item-content">
+                    <div class="property--slide-item-content-name">north</div>
+                    <div class="property--slide-item-content-des">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt sint eum, possimus aliquid animi maxime fuga nisi mollitia maiores in.</div>
                     <button>see more</button>
                 </div>
             </div>
-            <div class="item" style="background-image:url(../images/ttd-destination/nature.jpg);">
-                <div class="content">
-                    <div class="name">south</div>
-                    <div class="des">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt sint eum, possimus aliquid animi maxime fuga nisi mollitia maiores in.</div>
+            <div class="property--slide-item" style="background-image:url(../images/ttd-destination/nature.jpg);">
+                <div class="property--slide-item-content">
+                    <div class="property--slide-item-content-name">south</div>
+                    <div class="property--slide-item-content-des">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt sint eum, possimus aliquid animi maxime fuga nisi mollitia maiores in.</div>
                     <button>see more</button>
                 </div>
             </div>
