Created a footer.css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/ttd.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/footer.css">
     <title>Ravangla Star</title>
 </head>
 <body>
@@ -55,18 +56,12 @@
 
                 </div>
                 <!-- <a href="https://www.flaticon.com/free-icons/travel" title="travel icons">Travel icons created by Freepik - Flaticon</a> -->
-                <div class="header-heading-text-area">
+                <!-- <div class="header-heading-text-area"> -->
                     <h1 class="header-heading-title-text">
                         heart, soul and the himalayas
                     </h1>
-                    <!-- <p class="header-heading-title-para">
-                        Ravangla Star is your go-to DMC offering a range of tourism services,
-                        unvelling the essence of the Himalayan Mindset.
-                        We prioritize connecting people, fostering meaningful interactions,
-                        between tourist and the local Sikkimese community before showcasing the beauty of our destinations.
-                        It's all about people over place.
-                    </p> -->
-                </div>
+                   
+                <!-- </div> -->
                 <a href="#" class="header-heading-title-button">Explore</a>
 
                 <div class="header-heading-social-links">
@@ -95,15 +90,15 @@
         <div class="footer-main">
             <div class="footer-main-contacts">
                 <div class="footer-main-contacts-icons">
-                    <img class="footer-main-contacts-icons-whatsapp" src="images/icons/whatsapp.png" alt="whatsapp">
+                    <img class="footer-main-contacts-icons-target" src="images/icons/whatsapp.png" alt="whatsapp">
                     <p class="footer-main-contacts-icons-para">7477312911</p>
                 </div>
                 <div class="footer-main-contacts-icons">
-                    <img class="footer-main-contacts-icons-location" src="images/icons/map.png" alt="location">
+                    <img class="footer-main-contacts-icons-target" src="images/icons/map.png" alt="location">
                     <p class="footer-main-contacts-icons-para">Gangtok</p>
                 </div>
                 <div class="footer-main-contacts-icons">
-                    <img class="footer-main-contacts-icons-email" src="images/icons/gmail.png" alt="email">
+                    <img class="footer-main-contacts-icons-target" src="images/icons/gmail.png" alt="email">
                     <p class="footer-main-contacts-icons-para">sikkimtourism24@gmail.com</p>
                 </div>    
             </div>
@@ -130,7 +125,9 @@
                     <a href="" class="anchor">North viewpoint</a>
                     <a href="" class="anchor">South viewpoint</a>
             </div>
+            <div class="footer--pattern"></div>
         </div>
+        
     </footer>
 
     </div>
