Added curve to the header

--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
                     </a>
                 </div>
             </div>
-            
+            <svg width="0" height="0">
+                <defs>
+                    <clipPath id="curveClip" clipPathUnits="objectBoundingBox">
+                        <path d="M0,0 H1 V0.85 C0.75,0.95 0.25,0.95 0,0.85 Z" />
+                    </clipPath>
+                </defs>
+            </svg>
         </header>
         <main>
 
