--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/ttd.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/RavanglaStar/css/div.css">
+    <link rel="stylesheet" href="css/div.css">
     <link rel="stylesheet" href="css/footer.css">
 
     <title>Ravangla Star</title>
@@ -99,16 +99,16 @@
         <main>
             <div class="conatiner-box">
                 <div class="boxes">
-                    <img src="/RavanglaStar/images/bg-2.jpg" alt="" class="boxes-image">
+                    <img src="images/bg-2.jpg" alt="" class="boxes-image">
                 </div>
                 <div class="boxes">
-                    <img src="/RavanglaStar/images/bg-3.jpg" alt="" class="boxes-image">
+                    <img src="images/bg-3.jpg" alt="" class="boxes-image">
                 </div>
                 <div class="boxes">
-                    <img src="/RavanglaStar/images/bg-4.jpg" alt="" class="boxes-image">
+                    <img src="images/bg-4.jpg" alt="" class="boxes-image">
                 </div>
                 <div class="boxes">
-                    <img src="/RavanglaStar/images/generated images.jpeg" alt="" class="boxes-image">
+                    <img src="images/generated images.jpeg" alt="" class="boxes-image">
                 </div>
             </div>
         </main>
